style.css
body {
    font-family: Roboto, Arial, Helvetica, sans-serif;
    margin: 0;
}

body > div {
    padding: 0 150px;
}

.header,
.hero,
.footer {
    color: #F9FAF8;
    background-color: #1F2937;
}

.gallery {
    padding-bottom: 100px;
}

.quote-component {
    background-color: #E5E7EB;
    padding: 100px 250px;
}

.action-call {
    padding-top: 100px;
    padding-bottom: 100px;
}

/* Header section */

.header {
    height: 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-links {
    display: flex;
    margin: 0;
    padding: 0;
    list-style: none;
    gap: 20px;
}

.header-links a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.logo {
    font-weight: bolder;
    font-size: 24px;
}

/* Hero section */

.hero {
    display: flex;
    padding-top: 100px;
    padding-bottom: 100px;
}

.hero-text {
    flex: 1;
}

.hero-text p, h1{
    margin: 0;
}

.hero-text h1 {
    font-size: 48px;
    font-weight: bolder;
}

.hero-text p {
    color: #E5E7EB;
    font-size: 18px;
    margin-bottom: 10px;
}

.hero-img {
    flex: 1;
    background-color: #555f74;
    display: flex;
    justify-content: center;
    align-items: center;
}

button {
    background-color: #3882F6;
    color: #fff;
    font-weight: bold;
    padding: 5px 25px;
    border: none;
    border-radius: 7px;
}

/* Gallery section */

.gallery {
    padding-bottom: 100px;
}

.gallery-title {
    padding-top: 50px;
    padding-bottom: 50px;
    color: #1F2937;
    font-size: 36px;
    font-weight: bolder;
    text-align: center;
}

.gallery-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 85px;
}

.square-img {
    border: 4px solid #3882F6;
    border-radius: 10px;
    height: 150px;
    width:  150px;
    flex-shrink: 0;
}

.gallery-item {
    max-width: 150px;
    justify-content: center;
}

.description {
    text-align: center;
    padding: 10px 0;
}

/* Gallery section */

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1F2937;
}

.author {
    font-size: 20px;
    font-weight: bolder;
    text-align: right;
}

/* Action section */

.action {
    color: #E5E7EB;
    background-color: #3882F6;
    padding: 40px 100px;
    border-radius: 10px;
    display: flex;
    align-items: center;
}

.action-button {
    flex-grow: 0;
    border: 1px solid white
}

.action-text {
    flex-grow: 1;
}

.action-text h1, p{
    margin: 0;
}

.action-text h1 {
    font-size: 20px;
}

/* Footer section */

.footer {
    font-size: small;
    text-align: center;
    padding: 20px
}

